// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ToggleIcon /> matches snapshot when closed 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down fa-rotate-180"
    data-icon="chevron-down"
    data-prefix="fas"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 448 512"
  >
    <path
      d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`<ToggleIcon /> matches snapshot when open 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down"
    data-icon="chevron-down"
    data-prefix="fas"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 448 512"
  >
    <path
      d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;
